--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = teensy
 board = teensy41
 framework = arduino
-lib_deps = jrowberg/I2Cdevlib-MPU6050@0.0.0-alpha+sha.fbde122cc5
+lib_deps = 
+	jrowberg/I2Cdevlib-MPU6050@0.0.0-alpha+sha.fbde122cc5
+	mikalhart/TinyGPSPlus@^1.0.2
