--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 lib_deps = 
 	jrowberg/I2Cdevlib-MPU6050@0.0.0-alpha+sha.fbde122cc5
 	mikalhart/TinyGPSPlus@^1.0.2
+	lowpowerlab/BMP180@0.0.0-alpha+sha.efac46bd8d
