Component change  from MPU6050 to MPU9250

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	jrowberg/I2Cdevlib-MPU6050@0.0.0-alpha+sha.fbde122cc5
 	mikalhart/TinyGPSPlus@^1.0.2
 	lowpowerlab/BMP180@0.0.0-alpha+sha.efac46bd8d
+	arduino-libraries/Madgwick@^1.2.0
