Refactored the way drone update takes place

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ platform = teensy
 board = teensy41
 framework = arduino
 lib_deps = 
-	jrowberg/I2Cdevlib-MPU6050@0.0.0-alpha+sha.fbde122cc5
 	mikalhart/TinyGPSPlus@^1.0.2
 	lowpowerlab/BMP180@0.0.0-alpha+sha.efac46bd8d
 	dimag0g/PPM-reader@^1.0.0
+	hideakitai/MPU9250@^0.4.6
