Switched to arduino runtime, C++, and add basic application class

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,9 +7,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-
 [env:teensy41]
 platform = teensy
-framework = zephyr
+framework = arduino
 board = teensy41
 upload_protocol = teensy-cli
+monitor_speed = 115200
+; monitor_port = /dev/ttyACM0  ; Linux/Mac, use COMx for Windows
+
