--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,9 @@ framework = arduino
 board = teensy41
 upload_protocol = teensy-cli
 monitor_speed = 115200
-; monitor_port = /dev/ttyACM0  ; Linux/Mac, use COMx for Windows
+; test_framework = unity
+
+[env:native]
+platform = native
+test_framework = googletest
 
