--- a/platformio.ini
+++ b/platformio.ini
@@ -1,19 +1,21 @@
 ; PlatformIO Project Configuration File
 ;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
+;   Build options: build flags, source filter, extra scripting
+;   Upload options: custom port, speed and extra flags
 ;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:teensy41]
 platform = teensy
-board = teensy41
 framework = arduino
-lib_deps = 
-	mikalhart/TinyGPSPlus@^1.0.2
-	lowpowerlab/BMP180@0.0.0-alpha+sha.efac46bd8d
-	dimag0g/PPM-reader@^1.0.0
-	hideakitai/MPU9250@^0.4.6
+board = teensy41
+upload_protocol = teensy-cli
+monitor_speed = 115200
+; test_framework = unity
+
+[env:native]
+platform = native
+test_framework = googletest
+
