Now native logs are printing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,8 @@
         "init.hpp": "c",
         "stdexcept": "cpp",
         "cmath": "cpp",
-        "complex": "cpp"
+        "complex": "cpp",
+        "bit": "cpp"
     }
 }
+
