--- a/platformio.ini
+++ b/platformio.ini
@@ -7,15 +7,25 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[env:native]
+platform = native
+test_framework = googletest
+build_flags = 
+    -D BUILD_ENV_NAME=100
+    -D SPDLOG_COMPILED_LIB
+    -std=c++17
+lib_deps = 
+    spdlog
+lib_extra_dirs = lib
+
+
 [env:teensy41]
 platform = teensy
 framework = arduino
 board = teensy41
 upload_protocol = teensy-cli
 monitor_speed = 115200
-; test_framework = unity
+build_flags=
+    -D BUILD_ENV_NAME=101
 
-[env:native]
-platform = native
-test_framework = googletest
 
