Logging on native now works

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,8 @@
         "stdexcept": "cpp",
         "cmath": "cpp",
         "complex": "cpp",
-        "bit": "cpp"
+        "bit": "cpp",
+        "vector": "cpp"
     }
 }
 
