--- a/platformio.ini
+++ b/platformio.ini
@@ -13,11 +13,12 @@ test_framework = googletest
 build_flags = 
     -D BUILD_ENV_NAME=100
     -D SPDLOG_COMPILED_LIB
+    ; -D DEBUG_VERBOSE
     -std=c++17
+    -I src
 lib_deps = 
     spdlog
 lib_extra_dirs = lib
-
 
 [env:teensy41]
 platform = teensy
@@ -27,5 +28,5 @@ upload_protocol = teensy-cli
 monitor_speed = 115200
 build_flags=
     -D BUILD_ENV_NAME=101
-
+    -I src
 
