Now teensy41 working

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,6 @@ build_flags =
     -I src
 lib_deps = 
     spdlog
-lib_extra_dirs = lib
 
 [env:teensy41]
 platform = teensy
@@ -29,4 +28,10 @@ monitor_speed = 115200
 build_flags=
     -D BUILD_ENV_NAME=101
     -I src
+    -I lib/filters
+    -I lib/math
+    -I lib/pid
+; Include only specific libraries for Teensy41 (exclude spdlog)
+lib_ignore = 
+    spdlog
 
