Add some structure to dragonfly

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,9 +14,10 @@ build_flags =
     -D BUILD_ENV_NAME=100
     -D SPDLOG_COMPILED_LIB
     ; -D DEBUG_VERBOSE
-    -std=c++17
+    -std=c++20
     -I .
     -I src
+    -I lib/scope/include
 lib_deps = 
     spdlog
 
@@ -30,9 +31,7 @@ build_flags=
     -D BUILD_ENV_NAME=101
     -I .
     -I src
-    -I lib/filters
-    -I lib/math
-    -I lib/pid
+    -I lib/scope/include
 ; Include only specific libraries for Teensy41 (exclude spdlog)
 lib_ignore = 
     spdlog
