--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ build_flags =
     -D SPDLOG_COMPILED_LIB
     ; -D DEBUG_VERBOSE
     -std=c++20
-    -I .
+    -I include
     -I src
     -I lib/scope/include
 lib_deps = 
@@ -29,7 +29,7 @@ upload_protocol = teensy-cli
 monitor_speed = 115200
 build_flags=
     -D BUILD_ENV_NAME=101
-    -I .
+    -I include
     -I src
     -I lib/scope/include
 ; Include only specific libraries for Teensy41 (exclude spdlog)
